# enterprise-incident-intelligence-crewai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  report.html  report.md  workflow.html
data/: application_logs.txt  error_metrics.csv  incident_snapshot.json
src/enterprise_incident_intelligence_resolution_system/: crew.py  demo_inputs.py  main.py  report_builder.py
src/enterprise_incident_intelligence_resolution_system/config/: agents.yaml  tasks.yaml
